changed the external links to buttons

--- a/unit01/block05/zoo_problem/index.html
+++ b/unit01/block05/zoo_problem/index.html
@@ -28,7 +28,7 @@
                 <li>Ollie</li>
                 <li>Mona</li>
             </ul>
-            <a href="https://en.wikipedia.org/wiki/Bear" target=_ blank>Bears</a> <!-- Link to Wikipedia for that animal -->
+            <button><a href="https://en.wikipedia.org/wiki/Bear" target=_ blank class="button">Bears</a></button> <!-- Link to Wikipedia for that animal -->        
         </section>
         <section>
             <h2 id="giraffes">Giraffes</h2>
@@ -40,7 +40,7 @@
                 <li>Frankie</li>
                 <li>Coconut</li>
             </ul>
-            <a href="https://en.wikipedia.org/wiki/Giraffe" target=_ blank>Giraffes</a>
+            <button><a href="https://en.wikipedia.org/wiki/Giraffe" target=_ blank class="button">Giraffes</a></button>
         </section>
         <section>
             <h2 id="lions">Lions</h2>
@@ -52,7 +52,7 @@
                 <li>Mella</li>
                 <li>Karl</li>
             </ul>
-            <a href="https://en.wikipedia.org/wiki/Lion" target=_ blank>Lions</a>
+            <button><a href="https://en.wikipedia.org/wiki/Lion" target=_ blank class="button">Lions</a></button>
         </section>
         <section>
             <h2 id="monkeys">Monkeys</h2>
@@ -65,7 +65,7 @@
                 <li>Earl</li>
                 <li>Banana Pudding</li>
             </ul>
-            <a href="https://en.wikipedia.org/wiki/Monkey" target=_ blank>Monkeys</a>
+            <button><a href="https://en.wikipedia.org/wiki/Monkey" target=_ blank class="button">Monkeys</a></button>
         </section>
         <section>
             <h2 id="alligators">Alligators</h2>
@@ -78,7 +78,7 @@
                 <li>Aspen</li>
                 <li>Mika</li>
             </ul>
-            <a href="https://en.wikipedia.org/wiki/Alligator" target=_ blank>Alligators</a>
+            <button><a href="https://en.wikipedia.org/wiki/Alligator" target=_ blank class="button">Alligators</a></button>
         </section>
     </main>
 </body>
