added a dialogue box and changed the html.

--- a/unit01/block07/index.html
+++ b/unit01/block07/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secret Vault</title>
     <link rel="stylesheet" href="style.css" />
+    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
     <header>
         <h1>Secret Vault</h1>
     </header>
     <h2>Important Message From a Nigerian Prince!</h2>
-    <h3 id="message"></h3>
-    <script type="text/javascript" src="script.js"></script>
-    </body>
+    <h3 id="message">You have received this message because you have been chosen to open an important vault. Here is the secret combination: 10 - 40 - 39.</h3>
+</body>
 </html>
