--- a/unit01/block10/picasso_painting/index.html
+++ b/unit01/block10/picasso_painting/index.html
@@ -25,5 +25,23 @@
         <div class="triangle01"></div>
         <div class="triangle02"></div>
     </main>
+    <form action="formsubmitted.html">
+        <h2>If you are interested in art like this. Fill in your information below:</h2>
+        <section>
+            <label for="text">First Name</label>
+            <input type="text" value="First Name" />
+        </section>
+        <section>
+            <label for="text">Last Name</label>
+            <input type="text" value="Last Name" />
+        </section>
+        <section>
+            <label for="text" class="email">Email</label>
+            <input type="email" value="Email" />
+        </section>
+        <section>
+            <input type="submit" value="Submit" />
+        </section>
+    </form>
 </body>
 </html>
